logs/mobility/build.make.120.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘int main(int, char**)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:220:43: error: invalid use of qualified-name ‘SearchController::stateNames’
 const string SearchController::stateNames[] = {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                           ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
